--- a/docs/pages/basics/bitcoin-as-a-settlement-layer/finality.mdx
+++ b/docs/pages/basics/bitcoin-as-a-settlement-layer/finality.mdx
@@ -3,6 +3,8 @@ title: Finality
 description: Using Bitcoin Layer for Ensuring Irreversible Transactions on the Blockchain
 ---
 
+import ZoomImage from "../../../components/ZoomImage";
+
 # Finality [Using Bitcoin Layer for Ensuring Irreversible Transactions on the Blockchain]
 
 ## Stacks Model for Achieving Absolute Bitcoin Finality
@@ -11,7 +13,7 @@ Finality is the assurance or guarantee that transactions cannot be altered, reve
 
 Here are some ways through which 100% Bitcoin finality is achieved, reinforcing the trustworthiness and permanence of each transaction:
 
-<img src="/assets/finality.png" alt="Finality" />
+<ZoomImage src="/assets/finality.png" alt="Finality" />
 
 1. **Decentralized Consensus:** Utilizing Bitcoin's decentralized network of nodes to validate transactions ensures no single entity can alter the blockchain unilaterally, solidifying each transaction's permanence once confirmed.
 
