--- a/docs/pages/basics/bitcoin-as-a-settlement-layer/overview.mdx
+++ b/docs/pages/basics/bitcoin-as-a-settlement-layer/overview.mdx
@@ -3,6 +3,8 @@ title: Bitcoin as a Settlement Layer
 description: The Bitcoin Settlement Layer anchors Layer 2 scalability solutions
 ---
 
+import ZoomImage from "../../../components/ZoomImage";
+
 # Bitcoin as a Settlement Layer [The Bitcoin Settlement Layer anchors Layer 2 scalability solutions]
 
 The Bitcoin Settlement Layer plays a pivotal role in the infrastructure of Layer 2 (L2) scaling solutions by ensuring the integrity and finality of transactions. It utilizes the robust security and widespread trust in the Bitcoin blockchain to anchor the state of L2 networks, thereby leveraging Bitcoin's immutability to enhance the overall security of the L2 ecosystem.
@@ -21,7 +23,7 @@ First, within the ZK Proof Verifier of Rollup Module, the merkle tree root hash 
 
 Bitcoin serves as the ultimate settlement layer for Layer 2 Network. The rollup data is stored on Bitcoin, allowing complete retrieval or restoration of rollup transactions based on the inscriptions on Bitcoin. The computational validity of zk proof verification of rollup is confirmed on Bitcoin, thereby confirming the rollup.
 
-<img
+<ZoomImage
   src="/assets/bitcoin-as-a-settlement-layer.png"
   alt="bitcoin as a settlement layer"
 />
