--- a/docs/pages/basics/bitcoin-as-a-settlement-layer/shared-security/bitcoin-shared-security.mdx
+++ b/docs/pages/basics/bitcoin-as-a-settlement-layer/shared-security/bitcoin-shared-security.mdx
@@ -3,6 +3,8 @@ title: Bitcoin Shared Security
 description: Unlocking 21 Million to Secure the Decentralised Economy
 ---
 
+import ZoomImage from "../../../../components/ZoomImage";
+
 # Bitcoin Shared Security [Unlocking 21 Million to Secure the Decentralised Economy]
 
 ## Babylon Model for Bitcoin Shared Security with Staking
@@ -29,4 +31,7 @@ Bridges the economic security of Bitcoin with the operational security of PoS ch
 
 In essence, Bitcoin staking aims to tap into the vast reserves of Bitcoin as a secure and stable asset to bolster the security of PoS blockchains. This creates a win-win situation: PoS chains get a more robust security foundation without the need for excessive inflation or high staking requirements, and Bitcoin holders get new avenues for their assets to generate returns.
 
-<img src="/assets/bitcoin-shared-security.png" alt="bitcoin shared security" />
+<ZoomImage
+  src="/assets/bitcoin-shared-security.png"
+  alt="bitcoin shared security"
+/>
