--- a/docs/pages/index.mdx
+++ b/docs/pages/index.mdx
@@ -6,8 +6,10 @@ layout: landing
 
 import { Button } from "vocs/components";
 import { HomePage } from "vocs/components";
+import Zoom from "react-medium-image-zoom";
+import "react-medium-image-zoom/dist/styles.css";
 
-<div className="max-w-[1200px] mx-auto vp-doc relative px-[24px] md:mt-[12px] md:px-0 md:mb-20">
+<div className="max-w-[1200px] mx-auto vp-doc relative px-[24px] md:mt-[12px] md:px-0 md:mb-20 test">
   <div className="flex flex-col items-center justify-center">
     <img className="hidden dark:block h-24" src="/assets/surge_short_dark.svg" alt="docs" />
     <img className="block dark:hidden h-24" src="/assets/surge_short_lg.svg" alt="docs" />
