--- a/docs/pages/more-read/bitcoin-scaling-trilemma.mdx
+++ b/docs/pages/more-read/bitcoin-scaling-trilemma.mdx
@@ -3,13 +3,15 @@ title: Bitcoin Scaling Trilemma
 description: The main goal of Bitcoin L2 blockchains is to supercharge Bitcoin transactions (reduce transaction latency) without sacrificing decentralization or security.
 ---
 
+import ZoomImage from "../../components/ZoomImage";
+
 # Bitcoin Scaling Trilemma
 
 The main goal of Bitcoin L2 blockchains is to supercharge Bitcoin transactions (reduce transaction latency) without sacrificing decentralization or security.
 
 The RaaS Architecture aims to navigate the Bitcoin Scaling Trilemma, which posits that achieving scalability, decentralization, and security simultaneously is a complex challenge. By leveraging L2 solutions, the architecture advances Bitcoin's scalability without undermining its foundational attributes:
 
-<img src="/assets/scaling-trilemma.png" alt="scaling trilemma" />
+<ZoomImage src="/assets/scaling-trilemma.png" alt="scaling trilemma" />
 
 - **Scalability:** Through L2 solutions like Rollups and sidechains, transaction throughput is significantly increased, and latency is reduced, accommodating a higher volume of transactions.
 
