--- a/docs/pages/more-read/how-does-a-bitcoin-transaction-work.mdx
+++ b/docs/pages/more-read/how-does-a-bitcoin-transaction-work.mdx
@@ -3,11 +3,13 @@ title: How does a Bitcoin Transaction Work?
 description: A typical transaction in Bitcoin flow diagram
 ---
 
+import ZoomImage from "../../components/ZoomImage";
+
 # How does a Bitcoin Transaction Work?
 
 A simplified transaction on the bitcoin will look like this,
 
-<img
+<ZoomImage
   src="/assets/how-does-a-bitcoin-transaction-work.png"
   alt="how does a bitcoin transaction work"
 />
