--- a/docs/pages/more-read/how-raas-interface-will-evolve.mdx
+++ b/docs/pages/more-read/how-raas-interface-will-evolve.mdx
@@ -3,6 +3,8 @@ title: How RaaS Interface will Evolve?
 description: At the core of our platform, the operation revolves around a few key principles designed to maximize efficiency, security, and user accessibility
 ---
 
+import ZoomImage from "../../components/ZoomImage";
+
 # How RaaS Interface will Evolve? [Simplifying Complex Processes]
 
 At the core of our platform, the operation revolves around a few key principles designed to maximize efficiency, security, and user accessibility
@@ -11,7 +13,7 @@ At the core of our platform, the operation revolves around a few key principles 
 
 Seamless Integration and Continuous Innovation
 
-<img
+<ZoomImage
   className="md:w-[75%] mx-auto"
   src="/assets/rollup-interface.png"
   alt="rollup interface"
@@ -21,7 +23,7 @@ Seamless Integration and Continuous Innovation
 
 Weaving the components together to build Bitcoin L2 ecosystem
 
-<img
+<ZoomImage
   className="md:w-[50%] mx-auto"
   src="/assets/rollup-components.png"
   alt="rollup components"
