--- a/docs/pages/surge-building-blocks/superstack.mdx
+++ b/docs/pages/surge-building-blocks/superstack.mdx
@@ -3,6 +3,8 @@ title: Surge | Superstack
 description: A gateway to scale Rollups on Bitcoin
 ---
 
+import ZoomImage from "../../components/ZoomImage";
+
 # ⏫ Superstack [A gateway to scale Rollups on Bitcoin]
 
 ## Overview
@@ -23,7 +25,7 @@ The Surge Superstack serves as an intermediate layer above the Bitcoin Settlemen
 
 - **Utilities for Rollups:** Includes essential tools such as oracles, indexers, and bridges for runes and ordinals.
 
-<img
+<ZoomImage
   src="/assets/superstack-core-functions.png"
   alt="superstack core functions"
 />
