--- a/docs/pages/surge-building-blocks/utilities/native-stable-coins.mdx
+++ b/docs/pages/surge-building-blocks/utilities/native-stable-coins.mdx
@@ -3,6 +3,8 @@ title: Native Stable Coins
 description: Rollups can also introduce fragmentation of protocol’s total value locked (TVL) and inherent liquidity.
 ---
 
+import ZoomImage from "../../../components/ZoomImage";
+
 # ➡️ Native Stable Coins
 
 Rollups can also introduce fragmentation of protocol’s total value locked (TVL) and inherent liquidity. This problem highlights the need for increased interoperability between layer-2 ecosystems.
@@ -11,4 +13,4 @@ While Bitcoin rollups are critical for innovation and scalability, their viabili
 
 Trust-minimized zk bridge provides several benefits to Bitcoin Rollups:
 
-<img src="/assets/native-stable-coin.png" alt="native stable coin" />
+<ZoomImage src="/assets/native-stable-coin.png" alt="native stable coin" />
