--- a/docs/pages/basics/journey-of-rollups-on-bitcoin.mdx
+++ b/docs/pages/basics/journey-of-rollups-on-bitcoin.mdx
@@ -3,11 +3,13 @@ title: Journey of Rollups on Bitcoin
 description: Unwrapping rollups one layer at a time
 ---
 
+import ZoomImage from "../../components/ZoomImage";
+
 # Journey of Rollups on Bitcoin [Unwrapping rollups one layer at a time]
 
 Lets see the Bitcoin Roadmap from 2013 to Now,
 
-<img src="/assets/roadmap.png" alt="Increased roadmap" />
+<ZoomImage src="/assets/roadmap.png" alt="Increased roadmap" />
 
 ZK Rollups are a layer-2 scaling solution that perform transaction execution outside the main blockchain (layer-1) while maintaining data integrity and security through proofs.
 
@@ -17,7 +19,7 @@ ZK Rollups are a layer-2 scaling solution that perform transaction execution out
 
 Lets Understand, How can we build a trustless ZK Rollup
 
-<img src="/assets/trustless-zk.png" alt="Trustless Zk rollup" />
+<ZoomImage src="/assets/trustless-zk.png" alt="Trustless Zk rollup" />
 
 ### Main Limitations,
 
@@ -29,7 +31,7 @@ Lets Understand, How can we build a trustless ZK Rollup
 
 BitVM makes things interesting by enabling the ZK proof verifications within the Bitcoin ecosystem with "1 / n trust assumptions", paving the way for enhanced scalability and security.
 
-<img src="/assets/bitvm.png" alt="bitVM" />
+<ZoomImage src="/assets/bitvm.png" alt="bitVM" />
 
 ### Limitations,
 
@@ -41,7 +43,7 @@ If Sequencer goes rogue, Shared Sequencer Can we be a one of the solution but da
 
 With Data Availability Layer,
 
-<img src="/assets/data-availabilty.png" alt="Data availability layer" />
+<ZoomImage src="/assets/data-availabilty.png" alt="Data availability layer" />
 
 ## Inspiration from Validium, Sovereign Rollups
 
@@ -65,7 +67,7 @@ How can they cross compose and share liquidity ?
 
 But this can solved with the ZKPs which allows the Interactions with all the DA layers can be trustless allowing cross compute and shared liquidity
 
-<img src="/assets/da-layer.png" alt="da-layerr" />
+<ZoomImage src="/assets/da-layer.png" alt="da-layer" />
 
 ## Benefits of Rollups
 
@@ -73,13 +75,13 @@ But this can solved with the ZKPs which allows the Interactions with all the DA 
 
 - No need of External token, But L2s can have there own tokens
 
-- Programability or Global Statement
+- Programmability or Global Statement
 
 - Endless Scale & Flexibility, Can we built on anything like Rust, Javascript etc.,
 
 - Economic Density
 
-- Upgradability
+- Upgradeability
 
 ## Challenges in building Rollups on Bitcoin
 
