--- a/docs/pages/basics/understanding-the-rollups.mdx
+++ b/docs/pages/basics/understanding-the-rollups.mdx
@@ -3,11 +3,16 @@ title: Understanding the Rollups
 description: How traditional rollups works
 ---
 
+import ZoomImage from "../../components/ZoomImage";
+
 # Understanding the Rollups [How traditional rollups works]
 
 Rollups work by "rolling up" or bundling hundreds or thousands of transactions into a single transaction. This method significantly reduces the amount of data that needs to be processed and stored on the main blockchain, leading to faster transaction times and lower fees.
 
-<img src="/assets/understanding-rollups.png" alt="Understanding rollups" />
+<ZoomImage
+  src="/assets/understanding-rollups.png"
+  alt="Understanding rollups"
+/>
 
 ### Execution Flow:
 
