--- a/docs/pages/more-read/upcoming-bitcoin-l2s.mdx
+++ b/docs/pages/more-read/upcoming-bitcoin-l2s.mdx
@@ -3,11 +3,13 @@ title: Upcoming Bitcoin L2's
 description: Upcoming and existing Bitcoin L2's and List of teams working on it
 ---
 
+import ZoomImage from "../../components/ZoomImage";
+
 # Upcoming Bitcoin L2's [Upcoming and existing Bitcoin L2's and List of teams working on it]
 
 At the core of our platform, the operation revolves around a few key principles designed to maximize efficiency, security, and user accessibility
 This section provides a comprehensive overview of both upcoming and existing Bitcoin Layer 2 solutions.
 
-<img src="/assets/upcoming-bitcoin.png" alt="upcoming bitcoin L2" />
+<ZoomImage src="/assets/upcoming-bitcoin.png" alt="upcoming bitcoin L2" />
 
 _Source:_ complete list of all bitcoin L2 here - [BitcoinL2Map](https://bitcoinl2map.com/)
