--- a/docs/pages/surge-building-blocks/architecture.mdx
+++ b/docs/pages/surge-building-blocks/architecture.mdx
@@ -3,6 +3,8 @@ title: Surge Architecture
 description: A Modular novel approach taken by Surge to Scale Bitcoin ecosystem via Rollups (L2's)
 ---
 
+import ZoomImage from "../../components/ZoomImage";
+
 # Architecture
 
 ## Overview
@@ -19,7 +21,7 @@ Surge provides a layered approach for launching Bitcoin rollups by separating th
 
 3. **Data Layer:** Maintains data availability for the chain and data integrity, crucial for transparent operations across the platform.
 
-<img src="/assets/architecture-model.png" alt="architecture model" />
+<ZoomImage src="/assets/architecture-model.png" alt="architecture model" />
 
 ### Ecosystem Tooling
 
@@ -33,7 +35,7 @@ Out of the box, we plan on supporting multiple VMs like EVM, MoveVM., with plann
 
 Our proprietary Surge Superstack layer acts as an intermediary that sits on top of bitcoin. Superstack is a PoS protocol-based layer which secures the network and facilitates the proof verification of transactions. Superstack accepts the ZK proofs from the execution layers and pushes the transaction data to the DA layer and verified Merkle state hash to the Bitcoin L1 layer through inscriptions. By inscribing the data on the Bitcoin we are inheriting the security of Bitcoin.
 
-<img
+<ZoomImage
   className="md:w-[60%] mx-auto"
   src="/assets/superstack.png"
   alt="superstack"
