fix: nav update

--- a/docs/pages/basics/understanding-the-rollups.mdx
+++ b/docs/pages/basics/understanding-the-rollups.mdx
@@ -16,11 +16,11 @@ Rollups work by "rolling up" or bundling hundreds or thousands of transactions i
 
 ### Execution Flow:
 
-1. Transaction Aggregation: Numerous individual transactions are compiled into a single package.
+1. **Transaction Aggregation:** Numerous individual transactions are compiled into a single package.
 
-2. Data Posting: This bundled package is then posted to the main blockchain, significantly reducing the data storage and processing requirements.
+2. **Data Posting:** This bundled package is then posted to the main blockchain, significantly reducing the data storage and processing requirements.
 
-3. Execution Verification: Through smart contract mechanisms, the validity of all aggregated transactions is verified, ensuring that each transaction complies with the blockchain's rules.
+3. **Execution Verification:** Through smart contract mechanisms, the validity of all aggregated transactions is verified, ensuring that each transaction complies with the blockchain's rules.
 
 ## Types of Rollups
 
