--- a/docs/pages/surge-building-blocks/customizations/native-gas-token.mdx
+++ b/docs/pages/surge-building-blocks/customizations/native-gas-token.mdx
@@ -3,7 +3,7 @@ title: Surge | Native Gas Token
 description: You can use BTC as the native gas token on the Rollups. We are actively expanding this feature to include support for additional tokens, including protocol-specific tokens and stablecoins.
 ---
 
-# ➡️ Native Gas Token
+# Native Gas Token
 
 You can use BTC as the native gas token on the Rollups. We are actively expanding this feature to include support for additional tokens, including protocol-specific tokens and stablecoins.
 
