--- a/docs/pages/surge-building-blocks/mpc-tss-bridge.mdx
+++ b/docs/pages/surge-building-blocks/mpc-tss-bridge.mdx
@@ -5,7 +5,7 @@ description: 2 way Peg with MPC TSS based Network Nodes for BTC Bridge
 
 import ZoomImage from "../../components/ZoomImage";
 
-# ↳ 1️⃣ MPC TSS Bridge [2 way Peg with MPC TSS based Network Nodes for BTC Bridge]
+# MPC TSS Bridge [2 way Peg with MPC TSS based Network Nodes for BTC Bridge]
 
 Unlike traditional BTC bridges that rely on central custodians or multi-signature federations, Surge introduces a novel approach leveraging a verifier network powered by Multi-Party Computation (MPC) Threshold Signature Scheme (TSS).
 
