--- a/docs/pages/surge-building-blocks/superstack.mdx
+++ b/docs/pages/surge-building-blocks/superstack.mdx
@@ -5,7 +5,7 @@ description: A gateway to scale Rollups on Bitcoin
 
 import ZoomImage from "../../components/ZoomImage";
 
-# ⏫ Superstack [A gateway to scale Rollups on Bitcoin]
+# Superstack [A gateway to scale Rollups on Bitcoin]
 
 ## Overview
 
