--- a/docs/pages/surge-building-blocks/utilities/bridge-ordinals-and-runes.mdx
+++ b/docs/pages/surge-building-blocks/utilities/bridge-ordinals-and-runes.mdx
@@ -3,7 +3,7 @@ title: Bridge Ordinals and Runes
 description: We are currently in the process of enhancing and expanding our bridge capabilities to provide even greater security and interoperability. This module is actively under development as we continue to refine and optimize its functionality to better serve the evolving needs of our users.
 ---
 
-# ➡️ Bridge Ordinals and Runes [Facilitating Asset Interoperability]
+# Bridge Ordinals and Runes [Facilitating Asset Interoperability]
 
 ## Overview
 
