--- a/docs/pages/surge-building-blocks/utilities/native-stable-coins.mdx
+++ b/docs/pages/surge-building-blocks/utilities/native-stable-coins.mdx
@@ -5,7 +5,7 @@ description: Rollups can also introduce fragmentation of protocol’s total valu
 
 import ZoomImage from "../../../components/ZoomImage";
 
-# ➡️ Native Stable Coins
+# Native Stable Coins
 
 Rollups can also introduce fragmentation of protocol’s total value locked (TVL) and inherent liquidity. This problem highlights the need for increased interoperability between layer-2 ecosystems.
 
