--- a/docs/pages/surge-building-blocks/utilities/overview.mdx
+++ b/docs/pages/surge-building-blocks/utilities/overview.mdx
@@ -3,7 +3,7 @@ title: Utilities
 description: Enhancing Rollup Functionality
 ---
 
-# ↳ 3️⃣ Utilities [Enhancing Rollup Functionality]
+# Utilities [Enhancing Rollup Functionality]
 
 ## Overview
 
